<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/backgroundColor">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarBooking"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/primaryColor"
        app:title="@string/booking_title"
        app:titleTextColor="@android:color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/tvBookingSummary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etPassengerName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_passenger_name"
            android:layout_marginBottom="10dp" />

        <EditText
            android:id="@+id/etPassengerPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_phone"
            android:inputType="phone"
            android:layout_marginBottom="10dp" />

        <EditText
            android:id="@+id/etBookedSeats"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_booked_seats"
            android:inputType="number"
            android:layout_marginBottom="14dp" />

        <Button
            android:id="@+id/btnConfirmBooking"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/confirm_booking" />
    </LinearLayout>

</LinearLayout>
